# python-pyside6-template

./: .gitignore  README.md  pyproject.toml
app/: __main__.py  main.py
